# ScoringSystem

./: .gitignore  README.md  README_enhanced_schema.md  README_step1.md
abiss/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.docker  env.example  init.sql  pyproject.toml
abiss/alembic/: env.py
abiss/alembic/versions/: 0001_initial_migration.py
abiss/app/: __init__.py  db.py  main.py  models.py  schemas.py  settings.py
abiss/app/routers/: endpoints.py  findings.py  remediations.py  scores.py  telemetry.py
abiss/app/utils/: policy.py
abiss/app/workers/: scoring.py  suspicious_values.py  telemetri_şema_doğru_kopya.py  telemetry_schema_copy.py
collectors/: macos_collector_enhanced.sh  macos_collector_fixed.sh
diagram/: 1- Scoring System Component Flow.mmd  2- Scoring System Sequence Flow.mmd
docs/: rule_categories.md  rule_operators.md
examples/: sample_telemetry.json  sample_telemetry_linux.json  sample_telemetry_macos.json  sample_telemetry_windows.json
project_documents/: Project Proposal Form (4).docx
rules/: 01_firewall_enabled.yaml  02_antivirus_updated.yaml  03_os_patches.yaml  04_empty_passwords.yaml  05_guest_account.yaml  06_remote_desktop.yaml  07_admin_accounts.yaml  08_open_ports.yaml  09_system_uptime.yaml  100_acceptable_use_policy.yaml  101_data_handling_policy.yaml  102_incident_response_policy.yaml  103_business_continuity_plan.yaml  104_last_training_days.yaml  105_awareness_campaigns.yaml  106_training_compliance_rate.yaml  107_behavioral_analytics.yaml  108_machine_learning_detection.yaml  109_sandbox_analysis.yaml  10_auto_login.yaml  110_threat_hunting_queries.yaml  111_ioc_matches.yaml  112_risk_tolerance.yaml  113_mitigation_controls.yaml  114_residual_risk.yaml  115_running_services.yaml  116_stopped_services.yaml  117_auto_start_services.yaml  118_manual_start_services.yaml  (+155 more)
(+12 files in other folders)
